# goldberry

./: .gitignore  ACT.md  CHANGELOG.md  CLAIMS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  EVALUATION.md  LANDSCAPE.md  LICENCE  LICENSE-NOTES.md  PROVENANCE.md  README.md  REFLEXIVE-AUDIT-v1.md  RELEASE_NOTES_v0.1.0.md  ROADMAP.md  SECURITY.md  VIDEO-SCRIPT-AGENT-QC.md  VIDEO-SCRIPT-OPENCLAW.md  launch-copy.md  pyproject.toml  substack-aisi-analysis.md  substack-bbc-analysis.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  comparison-pack.md  feature_request.md
.github/workflows/: cymru-cultural-correct.yml  cymru-lens-analysis.yml
agent-identity/: AGENTS.md  LENSES.md  SOUL.md  SUFFIXSCAPE.md
case-studies/: news-01.md  news-02-city-ai-traffic.md  policy-01.md  policy-02-community-empowerment.md  research-01.md  research-02-ai-tutoring.md
evals/: CONTRIBUTOR-PROTOCOL.md  RUNBOOK.md  rubric.md
evals/baselines/: README.md  news-traffic.md  policy-empowerment.md  research-tutoring.md
evals/goldberry/: README.md  news-traffic.json  policy-empowerment.json  research-tutoring.json
evals/prompts/: README.md  (+3 more)
examples/: aisi-analysis-2026-03-29.md  anthropic-constitution-analysis-2026-03-29.md  bbc-homepage-analysis-2026-03-27.md  chatgpt-instructions.txt  claude-code-agents.md  generic-system-prompt.txt  hermes-skill.md  ollama-modelfile  perplexity-setup.md
schemas/: goldberry-output.schema.json
site/: aisi-analysis.html  bbc-analysis.html  index.html  robots.txt  sitemap.xml
tests/: test_prompt_assembly.py  test_schema.py
(+10 files in other folders)
